Safari flicker fix

--- a/stylesmedia.css
+++ b/stylesmedia.css
@@ -70,7 +70,7 @@ span {
   background-image: url(/jd-tex-compressed.jpg);
   background-size: cover;
   opacity: 0.5;
-  z-index: -2;
+  z-index: 2;
   position: fixed;
   left: 0;
   right: 0;
@@ -721,6 +721,11 @@ h1 {
     bottom: -10em;
   }
   /* CONTACT FOOTER 1046px -------------------- */
+  footer {
+    position: relative;
+    z-index: 3;
+  }
+
   .tarot-section {
     display: grid;
     place-items: center;
@@ -744,6 +749,10 @@ h1 {
     transform-style: preserve-3d;
     transition: transform 1s ease;
     transform: rotateY(180deg);
+  }
+
+  .inactive .card-link {
+    transform: rotate(180deg);
   }
 
   .card-link:nth-child(2) {
@@ -788,6 +797,7 @@ h1 {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     background: black;
     fill: #ff4c00;
     left: 0;
@@ -803,6 +813,7 @@ h1 {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     background: black;
     transform: rotateY(180deg);
     margin-bottom: 0;
